@@ -25,6 +25,7 @@ PHP_NEW_EXTENSION(random,
       engine_xoshiro256starstar.c \
       engine_secure.c \
       engine_user.c \
+      gammasection.c \
       randomizer.c,
       no,, -DZEND_ENABLE_STATIC_TSRMLS_CACHE=1)
 PHP_INSTALL_HEADERS([ext/random], [php_random.h])
